<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/last_searched_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_of_home_fragment"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/my_dark_red"
        app:layout_constraintBottom_toTopOf="@id/guide_30"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:text="@string/seach_from_11027_words"
            android:textColor="#F1F1F1"
            android:id="@+id/find_from_11027words"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/search_et_root"
            app:layout_constraintTop_toBottomOf="@id/find_from_11027words"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/search_bg"
            android:padding="18dp"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/search_et_icon_search"
                android:layout_weight="1"
                android:src="@drawable/search_icon"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <EditText
                android:background="@android:color/transparent"
                android:layout_weight="20"
                android:hint="@string/type_something"
                android:id="@+id/search_et"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/search_et_icon_copy"
                android:layout_weight="1"
                android:src="@drawable/copysimple_icon"
                android:layout_width="24dp"
                android:layout_height="24dp" />
            <ImageView
                android:id="@+id/search_et_icon_microphone"
                android:layout_weight="1"
                android:src="@drawable/microphone"
                android:layout_width="24dp"
                android:layout_height="24dp" />
        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/word_day_btn"
                android:textColor="#F1F1F1"
                android:textSize="18sp"
                android:text="@string/word_day"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp" />
            <TextView
                android:id="@+id/all_of_btn"
                android:textColor="#F1F1F1"
                android:textSize="18sp"
                android:text="@string/all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/guide_30"
        app:layout_constraintBottom_toTopOf="@id/last_searched_guide"
        android:layout_marginTop="-16dp"
        android:background="@drawable/bayrak_bg"
        android:id="@+id/bayrak_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/bayrak_sample_date"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/bayrak_sample_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/text_bayrak"
            android:text="education"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:gravity="center"
            android:scrollbars="vertical"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />

        <LinearLayout
            android:id="@+id/tools_root"
            app:layout_constraintTop_toBottomOf="@id/text_bayrak"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/copy_tool"
                android:layout_height="60dp"
                android:layout_width="60dp"
                android:orientation="vertical"
                android:padding="6dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:background="@drawable/tool_bg">
                <ImageView
                    android:src="@drawable/copysimple_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp" />

                <TextView
                    android:text="@string/copy"
                    android:textColor="@color/my_dark_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/speaker_tool"
                android:layout_height="60dp"
                android:layout_width="60dp"
                android:orientation="vertical"
                android:padding="6dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:background="@drawable/tool_bg">
                <ImageView
                    android:src="@drawable/speakerhigh_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp" />

                <TextView
                    android:text="@string/Tinglash"
                    android:textColor="@color/my_dark_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/saved_tool"
                android:layout_height="60dp"
                android:layout_width="60dp"
                android:orientation="vertical"
                android:padding="6dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:background="@drawable/tool_bg">
                <ImageView
                    android:src="@drawable/saved_tool_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp" />

                <TextView
                    android:text="@string/saved"
                    android:textColor="@color/my_dark_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/share_tool"
                android:layout_height="60dp"
                android:layout_width="60dp"
                android:orientation="vertical"
                android:padding="6dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:background="@drawable/tool_bg">
                <ImageView
                    android:src="@drawable/sharenetwork"
                    android:layout_width="22dp"
                    android:layout_height="22dp" />

                <TextView
                    android:text="@string/share"
                    android:textColor="@color/my_dark_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/last_searched_guide"
        android:id="@+id/bottomt_of_home_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ScrollView
            android:id="@+id/scroll_view_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/last_searched_tvs"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/last_searched"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/last_searched"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:id="@+id/all_of_btn_lastsearched"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/all"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    app:layout_constraintTop_toBottomOf="@id/last_searched_tvs"
                    android:id="@+id/last_searched_rv"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:minHeight="100dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
<!--test-->
                <LinearLayout
                    android:id="@+id/last_searched_tvs2"
                    app:layout_constraintTop_toBottomOf="@id/last_searched_rv"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/saved_home_title"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/saved_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:id="@+id/all_of_btn_saved"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/all"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    app:layout_constraintTop_toBottomOf="@id/last_searched_tvs2"
                    android:id="@+id/saved_home_rv"
                    android:minHeight="100dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>